
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int crypto_core_ed25519_SCALARBYTES ;
 int crypto_core_ed25519_scalar_add (unsigned char*,unsigned char const*,unsigned char*) ;
 int crypto_core_ed25519_scalar_negate (unsigned char*,unsigned char const*) ;

void
crypto_core_ed25519_scalar_sub(unsigned char *z, const unsigned char *x,
                               const unsigned char *y)
{
    unsigned char yn[crypto_core_ed25519_SCALARBYTES];

    crypto_core_ed25519_scalar_negate(yn, y);
    crypto_core_ed25519_scalar_add(z, x, yn);
}
